--- a/package.json
+++ b/package.json
@@ -8,19 +8,18 @@
   "common": "dist/main.js",
   "source": "src/index.js",
   "dependencies": {
-    "generate-schema": "^2.6.0"
-  },
-  "peerDependencies": {
     "@ant-design/compatible": "^1.0.8",
+    "@ant-design/icons": "^4.6.2",
     "antd": "^4.15.0",
     "brace": "0.10.0",
-    "moox": "^1.0.8",
     "form-render": "^0.10.5",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.3",
-    "redux": "^4.0.5",
-    "underscore": "^1.12.1"
+    "generate-schema": "^2.6.0",
+    "lodash": "^4.17.21",
+    "moox": "^1.0.8",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-redux": "^6.0.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
@@ -49,6 +48,7 @@
     "bfj": "^7.0.2",
     "camelcase": "^6.1.0",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "cross-env": "^7.0.3",
     "css-loader": "^5.2.0",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
@@ -103,7 +103,8 @@
     "ts-pnp": "1.2.0",
     "url-loader": "4.1.1",
     "web-vitals": "^1.0.1",
-    "webpack": "4.44.2",
+    "webpack": "^5.30.0",
+    "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "3.11.1",
     "webpack-manifest-plugin": "2.2.0",
@@ -114,6 +115,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "package": "webpack --config scripts/package.js",
+    "analyze": "cross-env NODE_ENV=production npm_config_report=true npm run package",
     "rollup": "rollup -c",
     "test": "webpack --config scripts/test.js",
     "eslint-fix": "eslint src/**/*.*  --fix"
