--- a/package.json
+++ b/package.json
@@ -103,7 +103,7 @@
     "ts-pnp": "1.2.0",
     "url-loader": "4.1.1",
     "web-vitals": "^1.0.1",
-    "webpack": "^5.30.0",
+    "webpack": "4.44.2",
     "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "3.11.1",
