--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@ant-design/icons": "^4.6.2",
     "antd": "^4.15.0",
     "brace": "0.10.0",
+    "fetch-jsonp": "^1.1.3",
     "form-render": "^0.10.5",
     "generate-schema": "^2.6.0",
     "lodash": "^4.17.21",
     "moox": "^1.0.8",
+    "querystring": "^0.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^6.0.0",
