--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^4.6.2",
     "antd": "^4.15.0",
     "brace": "0.10.0",
+    "copy-to-clipboard": "^3.3.1",
     "fetch-jsonp": "^1.1.3",
     "form-render": "^0.10.5",
     "generate-schema": "^2.6.0",
